feat(api): add today habit view
